--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
   "workspaces": [
     "packages/*",
     "examples/*"
-  ]
+  ],
+  "msw": {
+    "workerDirectory": [
+      "packages\\assignment-7\\public"
+    ]
+  }
 }
