--- a/packages/assignment-7/package.json
+++ b/packages/assignment-7/package.json
@@ -19,6 +19,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@testing-library/react-hooks": "^8.0.1",
     "express": "^4.19.2",
     "framer-motion": "^11.3.2",
     "react": "^18.3.1",
